fix overflow bug

--- a/styles.css
+++ b/styles.css
@@ -215,6 +215,8 @@ main {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  gap: 1rem;
+  overflow: hidden;
 }
 
 .billResultTypeContainer {
